[tool.poetry]
name = "aiie"
version = "0.1.0"
description = ""
authors = ["Djalel Benbouzid <coder@dbenbouzid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
watchdog = "^3.0.0"
pandas = "^2.1.0"
plotly = "^5.16.1"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
